<resources>
    <string name="app_name">DEMO</string>
    <string name="login_username">账号</string>
    <string name="login_userPassword">密码</string>
    <string name="remember">记住密码</string>
    <string name="login_login">登录</string>
    <string name="login_create">注册</string>
    <string name="login_create_username">请输入用户名</string>
    <string name="login_create_password1">请输入密码</string>
    <string name="login_create_password2">请确认密码</string>
    <string name="login_create_cancel">取消</string>
    <string name="head_image1">HEAD</string>
    <string name="xxx">xxx</string>
    <string name="next">继续</string>
    <string name="spoof">Spoof</string>
    <string name="tv_spoof_say">你应该很帅吧\n有很多人喜欢吧</string>
    <string name="btn_spoof_yes">是的</string>
    <string name="nextIn">您现在在成功\n登陆后的界面!\n我懒得删这一页了。。。</string>
    <string name="head">HEAD</string>
    <string name="todo">TODO</string>
    <string name="btn_next">下一张</string>
    <string name="btn_last">上一张</string>
    <string name="pictureNum_1">1</string>
    <string name="show_out">手机内私藏图片（才不是</string>
</resources>