<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <ImageView
        android:id="@+id/iv_create_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_content_background"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/et_create_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:autofillHints="AUTOFILL_HINT_USERNAME"
        android:drawableStart="@drawable/ic_baseline_account_box_24"
        android:hint="@string/login_create_username"
        android:inputType="text"
        android:lines="1"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_create_background"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/et_create_password1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="AUTOFILL_HINT_PASSWORD"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:hint="@string/login_create_password1"
        android:inputType="textPassword"
        android:lines="1"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/et_create_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_create_username"
        app:layout_constraintTop_toBottomOf="@+id/et_create_username"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/et_create_password2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="AUTOFILL_HINT_PASSWORD"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:hint="@string/login_create_password2"
        android:inputType="textPassword"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="@+id/et_create_password1"
        app:layout_constraintStart_toStartOf="@+id/et_create_password1"
        app:layout_constraintTop_toBottomOf="@+id/et_create_password1"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btn_create_next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@+id/et_create_password2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_create_password2"
        app:layout_constraintTop_toBottomOf="@+id/et_create_password2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_create_cancel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_create_cancel"
        app:layout_constraintEnd_toEndOf="@+id/btn_create_next"
        app:layout_constraintStart_toStartOf="@+id/btn_create_next"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_next"
        tools:ignore="MissingConstraints,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>