<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpoofActivity">

    <ImageView
        android:id="@+id/iv_spoof_background"
        android:layout_width="308dp"
        android:layout_height="706dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_spoof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_spoof_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_spoof_say"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_spoof_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_spoof_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_spoof_out"
        app:layout_constraintStart_toStartOf="@+id/tv_spoof_out"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>